# ruwstgi

./: Cargo.toml  README.md  config-example.toml
.github/workflows/: ci.yml
data/cgi-bin/: index.cgi
src/: main.rs
